Update $VERBOSE to be nil, true, or false instead of boolean Make when *array work Remove unused import
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@1438 961051c9-f516-0410-bf72-c9f7e237a7b7